Fix background and heading problem

--- a/index.html
+++ b/index.html
@@ -3,20 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway</title>
-    <link href="./resources/css/style.css" type="text.css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="main-banner"
+    <div class="main-banner">
       <h1>Broadway Design</h1>
-      <a>Home</a>
-      <a>Process</a>
-      <a>Work</a>
-      <a>Team</a>
-      <a>Contact</a>
-      <img src="./resources/images/the-flatiron-building.png">
+      <a href="">Home</a>
+      <a href="">Process</a>
+      <a href="">Work</a>
+      <a href="">Team</a>
+      <a href="">Contact</a>
     </div>
-
-
-
   </body>
 </html>
