Add identify section

--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
   <body>
     <div class="main-banner">
       <h1>Broadway Design</h1>
-      <a href="">Home</a>
-      <a href="">Process</a>
-      <a href="">Work</a>
-      <a href="">Team</a>
+      <a href="">Home</a> <br /><br />
+      <a href="">Process</a> <br /><br />
+      <a href="">Work</a> <br /><br />
+      <a href="">Team</a> <br /><br />
       <a href="">Contact</a>
     </div>
+    <h2>Our Process</h2>
+    <img src="./resources/images/identify.svg">
+    <h3>Identify</h3>
+    <p>We focus on the most important details.</p>
+  
   </body>
 </html>
