--- a/index.html
+++ b/index.html
@@ -26,5 +26,13 @@
     <p>We put everything we have into our work.</p>
     <div class="sub-banner">
       <h3>Designed in New York</h3>
+    </div>
+    <h3>Portfolio</h3>
+    <p>Coming Soon</p>
+    <h3>Team</h3>
+    <p>We're Hiring!</p>
+    <h3>Contact</h3>
+    <p>Phone: (555)555-555<br /><br />E-mail: test@example.com<br /><br />Twitter @test</p>
+
   </body>
 </html>
