Add foot html and css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
     <h3>Team</h3>
     <p>We're Hiring!</p>
     <h3>Contact</h3>
-    <p>Phone: (555)555-555<br /><br />E-mail: test@example.com<br /><br />Twitter @test</p>
+    <p>Phone: (555)555-555<br /><br />E-mail: test@example.com<br /><br />Twitter: @test</p>
+    <div class="footer">
+      <p>© Broadway 2016
+        <a href="">Home</a>
+        <a href="">Process</a>
+        <a href="">Work</a>
+        <a href="">Team</a>
+        <a href="">Contact</a>
+      </p>
+    </div>
 
   </body>
 </html>
