--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     <div class="main-banner">
       <h1>Broadway Design</h1>
-      <a href="">Home</a> <br /><br />
-      <a href="">Process</a> <br /><br />
-      <a href="">Work</a> <br /><br />
-      <a href="">Team</a> <br /><br />
-      <a href="">Contact</a>
+      <p><a href="">Home</a></p>
+      <p><a href="">Process</a></p>
+      <p><a href="">Work</a></p>
+      <p><a href="">Team</a></p>
+      <p><a href="">Contact</a></p>
     </div>
     <h2>Our Process</h2>
     <img src="./resources/images/identify.svg">
