--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     <div class="main-banner">
       <h1>Broadway Design</h1>
-      <p><a href="">Home</a></p>
-      <p><a href="">Process</a></p>
-      <p><a href="">Work</a></p>
-      <p><a href="">Team</a></p>
-      <p><a href="">Contact</a></p>
+      <p><a href="#Home">Home</a></p>
+      <p><a href="#Process">Process</a></p>
+      <p><a href="#Work">Work</a></p>
+      <p><a href="#Team">Team</a></p>
+      <p><a href="#Contact">Contact</a></p>
     </div>
     <h2>Our Process</h2>
     <img src="./resources/images/identify.svg">
@@ -35,11 +35,11 @@
     <p>Phone: (555)555-555<br /><br />E-mail: test@example.com<br /><br />Twitter: @test</p>
     <div class="footer">
       <p>© Broadway 2016
-        <a href="">Home</a>
-        <a href="">Process</a>
-        <a href="">Work</a>
-        <a href="">Team</a>
-        <a href="">Contact</a>
+        <a href="#Home">Home</a>
+        <a href="#Process">Process</a>
+        <a href="#Work">Work</a>
+        <a href="#Team">Team</a>
+        <a href="#Contact">Contact</a>
       </p>
     </div>
 
