--- a/index.html
+++ b/index.html
@@ -6,24 +6,26 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="main-banner">
+    <nav class="main-banner">
       <h1>Broadway Design</h1>
       <p><a href="#Home">Home</a></p>
       <p><a href="#Process">Process</a></p>
       <p><a href="#Work">Work</a></p>
       <p><a href="#Team">Team</a></p>
       <p><a href="#Contact">Contact</a></p>
+    </nav>
+    <div class="Process">
+      <h2>Our Process</h2>
+      <img src="./resources/images/identify.svg">
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+      <img src="./resources/images/understand.svg">
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+      <img src="./resources/images/execute.svg">
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
     </div>
-    <h2>Our Process</h2>
-    <img src="./resources/images/identify.svg">
-    <h3>Identify</h3>
-    <p>We focus on the most important details.</p>
-    <img src="./resources/images/understand.svg">
-    <h3>Understand</h3>
-    <p>We study our projects inside and out.</p>
-    <img src="./resources/images/execute.svg">
-    <h3>Execute</h3>
-    <p>We put everything we have into our work.</p>
     <div class="sub-banner">
       <h3>Designed in New York</h3>
     </div>
